--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.1",
-        "nodemon": "^2.0.16",
         "sqlite3": "^5.0.6",
         "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.16"
     }
 }
